# fastapi-with-jinja2

./: pyproject.toml
fastapiproject/: main.py
fastapiproject/static/: sign.css
fastapiproject/templates/: base.html  sign.html
