[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
jinja2 = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
